# labsc_zephyr_lorawan

./: .board  .gitignore  .gitmodules  CMakeLists.txt  PINMAP.md  README.md  prj.conf  prj_lowpower.conf  setup.sh
boards/: blackpill_f411ce.conf  blackpill_f411ce.overlay  esp32c6_devkitc_esp32c6_hpcore.conf  esp32c6_devkitc_esp32c6_hpcore.overlay  user_keys.overlay
patches/: 0001-usp_zephyr-xiao_nrf54l15-add-full_name.patch
snippets/at_modem/: at_modem.conf  snippet.yml
snippets/expansion/: blackpill.overlay  esp32c6.overlay  expansion.conf  snippet.yml
src/: main.c
